# aiden

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  Procfile  README.md  pyproject.toml  railway.json  requirements.txt
backend/: __init__.py
backend/agents/: __init__.py  concrete_agents.py  definitions.py
backend/api/: __init__.py  deps.py  main.py
backend/config/: agent_resources.json  cdn_urls.json  personas.yaml  planning_presets.json
backend/core/: __init__.py  anthropic_client.py  base_agent.py  cost_tracker.py  judge_model_resolver.py  llm_clients.py  openai_client.py  runtime_keys.py  settings.py
backend/llm/: __init__.py  anthropic_agent_client.py  gemini_client.py
backend/orchestration/: __init__.py
backend/orchestrators/: __init__.py  base_newsroom.py  content_newsroom.py  full_pipeline.py  gameifier.py  judge_panel.py  topic_newsroom.py  trace_logger.py
backend/storage/: __init__.py  outputs_store.py
backend/templates/: plustab_structure.md  type_a.html  type_b.html
config/: agents.yaml  brand.yaml  deployment.yaml  platform.yaml
docs/: 01-quick-start.md  02-architecture.md  03-customization.md  06-handover.md  NEXT_BUNDLE_NOTES.md  _facts.md  early_integration_report.md
frontend/: .gitkeep  package-lock.json  package.json  tailwind.config.ts
scripts/: .gitkeep  run_api_server.py  run_content_newsroom_live.py  run_full_pipeline.py  run_topic_newsroom_live.py
tests/: test_base_agent.py  test_content_newsroom.py  test_full_pipeline.py  test_gameifier.py  test_judge_model_resolver.py  test_judge_panel.py  test_topic_newsroom.py
(+165 files in other folders)
